--- a/app/views/layout/layout.html
+++ b/app/views/layout/layout.html
@@ -1,3 +1,4 @@
+
 <html>
 	<head>
 	<script type="text/javascript" src="@{'public/javascripts/jquery-1.6.4.min.js'}"></script>
@@ -6,14 +7,14 @@
 
 	</head>
 	<body  >
-	<div data-role="page" style="height: 100%;min-height: 100%">
-		<div data-role="header" style="height: 10%;">
+	<div data-role="page">
+		<div data-role="header" data-position="fixed">
 			<h1>#{get 'title' /}</h1>
 		</div>
-		<div data-role="content" style="height: 80%;min-height: 80%">
+		<div data-role="content">
 		#{doLayout /}
 		</div>
-		<div data-role="footer"  style="height: 10%;"> 
+		<div data-role="footer" data-position="fixed"> 
 			<h4>Schulinfos</h4> 
 		</div>
 	</div>	
